#10 Use esn-frontend-inbox-calendar module to have calendar & resource blue-bar / indicator

--- a/src/all.less
+++ b/src/all.less
@@ -1,5 +1,6 @@
 @import "~angularjs-dragula/dist/dragula.css";
 @import "~ui-select/dist/select.css";
 @import "~esn-frontend-common-libs/src/all.less";
+@import "~esn-frontend-inbox-calendar/src/all.less";
 
 @import "./linagora.esn.unifiedinbox/app/inbox.less";
