--- a/src/linagora.esn.unifiedinbox/views/partials/inbox-indicators.pug
+++ b/src/linagora.esn.unifiedinbox/views/partials/inbox-indicators.pug
@@ -3,6 +3,8 @@
     li.action-item(ng-class="{'hidden-xl': hiddenXl}")
       i.flag-icon.mdi.mdi-reply(ng-if='item.isAnswered', title="{{ 'Replied' | translate }}")
       i.flag-icon.mdi.mdi-forward(ng-if='item.isForwarded', title="{{ 'Forwarded' | translate }}")
-      i.inbox-message-indicators(dynamic-directive='inbox-message-indicators')
+      i.inbox-message-indicators
+        cal-inbox-invitation-message-indicator(ng-if="ctrl.shouldDisplayCalendarInvitationMessageIndicator")
+        cal-inbox-resource-management-indicator(ng-if="ctrl.shouldDisplayCalendarResourceManagementIndicator")
       i.flag-icon.mdi.mdi-paperclip(ng-if='item.hasAttachment', title="{{ 'Attachments' | translate }}")
     inbox-star(item='item')
